environment making and dataset link add

--- a/rough_experiments.ipynb
+++ b/rough_experiments.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "011b7a09",
    "metadata": {},
    "outputs": [
@@ -20,32 +20,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Using the latest cached version of the module from C:\\Users\\ritap\\.cache\\huggingface\\modules\\datasets_modules\\datasets\\squad\\d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453 (last modified on Thu May 25 17:59:20 2023) since it couldn't be found locally at squad., or remotely on the Hugging Face Hub.\n",
       "Found cached dataset squad (C:/Users/ritap/.cache/huggingface/datasets/squad/plain_text/1.0.0/d6ec3ceb99ca480ce37cdd35555d6cb2511d223b9150cce08a837ef62ffea453)\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4f52d611c51427aa98ef6e499fdc0e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "squad = load_dataset(\"squad\", split=\"train[:5]\")"
+    "squad = load_dataset(\"squad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "a482d927",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dataset({\n",
-       "    features: ['id', 'title', 'context', 'question', 'answers'],\n",
-       "    num_rows: 5\n",
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'title', 'context', 'question', 'answers'],\n",
+       "        num_rows: 87599\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['id', 'title', 'context', 'question', 'answers'],\n",
+       "        num_rows: 10570\n",
+       "    })\n",
        "})"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,12 +82,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "squad = squad.train_test_split(test_size=0.2)"
+    "# squad = squad.train_test_split(test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "acbd2e2b",
    "metadata": {},
    "outputs": [
@@ -76,7 +97,7 @@
        "datasets.arrow_dataset.Dataset"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,23 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "791af2d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "'Architecturally, the school has a Catholic character. Atop the Main Building\\'s gold dome is a golden statue of the Virgin Mary. Immediately in front of the Main Building and facing it, is a copper statue of Christ with arms upraised with the legend \"Venite Ad Me Omnes\". Next to the Main Building is the Basilica of the Sacred Heart. Immediately behind the basilica is the Grotto, a Marian place of prayer and reflection. It is a replica of the grotto at Lourdes, France where the Virgin Mary reputedly appeared to Saint Bernadette Soubirous in 1858. At the end of the main drive (and in a direct line that connects through 3 statues and the Gold Dome), is a simple, modern stone statue of Mary.'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(train_data)"
+    "train_data[3]['context']"
    ]
   },
   {
